# reluxscript

./: CHANGELOG.md  DECORATOR_REQUIREMENTS.md  LICENSE  README.md  build-wasm.bat  install-wasm-pack.bat  rename_extensions.py
reluxscript-test-watcher/: Cargo.toml  README.md  install-service.ps1  run-console.ps1  uninstall-service.ps1
reluxscript-test-watcher/src/: main.rs
source/: CODEGEN_FIXES_VERIFIED.md  CODEGEN_ISSUES.md  CODEGEN_ROOT_CAUSES.md  Cargo.toml  LICENSE  README.md  check_parse_errors.py  extract_methods.py  extract_methods_v2.py  parser_test_results.txt  test_analyzers.py  test_codegen.py  test_extractors.sh  test_gaps.py  test_parser.sh
source/examples/: CODEGEN_ISSUES.md  babel_output.js  build_member_path.rsc  console-stripper.rsc  console_remover.lux  custom_props_simple.lux  custom_props_test.lux  deep_chain_test.lux  expected_output.js  kitchen_sink_plugin.lux  kitchen_sink_writer.lux  matches_test.rsc  optional_chain_test.rsc  ownership_test.rsc  package-lock.json  package.json  remove_console_website.lux  simple.lux  swc_output.js  swc_writer_output.txt  test.rsc  test_both.sh  test_both_plugins.sh  test_both_plugins_simple.sh  test_both_writer.sh  test_format.lux  test_input.js  traverse-test.rsc
source/examples/console_remover-output/: index.js  lib.rs
source/examples/dist_deep/: index.js  lib.rs
source/examples/dist_optional/: index.js  lib.rs
source/examples/matches_test-output/: index.js  lib.rs
source/examples/minimal_tests/: test_boxed_pattern.lux  test_callee_pattern.lux  test_collect.lux  test_derive_clone.lux  test_ident_sym.lux  test_if_let_binding.lux  test_if_let_return.lux  test_into_call.lux  test_matches.lux  test_member_property.lux  test_number_type.lux  test_result.lux  test_self_call.lux  test_state_field.lux  test_string_literal_into.lux  test_string_methods.lux  test_unwrap_or.lux  test_vec_push.lux
source/examples/simple-output/: index.js  lib.rs
source/examples/swc_test_runner/: Cargo.toml  plugin.rs
source/examples/swc_writer_test/: Cargo.toml
source/examples/tsx_parser_test/: extract_interfaces.lux  input.tsx
source/reluxscript-test-watcher/: Cargo.toml
source/src/: lib.rs  main.rs  wasm.rs
source/src/autofix/: mod.rs  token_rewriter.rs
source/src/codegen/: babel.rs  decorated_ast.rs  mod.rs  swc.rs  swc_decorator.rs  swc_emit.rs  swc_hoister.rs  swc_metadata.rs  swc_original.rs  swc_patterns.rs  swc_rewriter.rs  swc_stub.rs  type_context.rs
source/src/lexer/: lexer.rs  mod.rs  token.rs
source/src/lsp/: completions.rs  diagnostics.rs  handlers.rs  mod.rs  server.rs
source/src/mapping/: fields.rs  helpers.rs  mod.rs  nodes.rs  patterns.rs  ts_helpers.rs
source/src/parser/: ast.rs  mod.rs  parser.rs
source/src/semantic/: hoist_unwraps.rs  mod.rs  ownership.rs  resolver.rs  type_checker.rs  types.rs
source/src/type_system/: mod.rs  type_context.rs  type_environment.rs
source/test_output/: index.js  lib.rs
source/tests/: closure_test.rsc  integration_test.rs  match_simple_test.rsc  match_variant_test.rsc  matches_test.rsc  multiline_imports_test.lux  plugin_with_state.lux  raw_string_test.lux  regex_test.lux  self_simple_test.lux  self_struct_test.lux  simple_plugin.lux  simple_writer.lux  struct_return_test.rsc  test_autofix.rs  test_emitter_issues.lux  unit_test.lux  use_import_test.lux  vec_multiline_test.rsc  vec_struct_test.lux
source/tests/codegen/: block_expr.rsc  closure_block.rsc  codegen_basic.lux  fix_minimact.py  hex_path.rsc  matches_macro.rsc  minimact_full_refactored.rsc  minimact_full_refactored_fixed.lux  minimact_full_refactored_v2.lux  minimact_refactored_fixed.rsc  new_features.lux  parser_module.lux  regex_simple.lux  regex_test.lux  test_analyzers.py  test_hex_path_import.lux  test_hooks.rsc  test_init_return.lux  test_iterators.rsc  test_match_expression.lux  test_match_with_binding.rsc  test_matches_macro.rsc  test_module_helper.rsc  test_module_main.rsc  test_nested_struct.lux  test_node_mutation.lux  test_pattern_matching.lux  test_return_in_match.rsc  test_simple_struct.lux  test_string_literals.rsc  test_top_level_struct.rsc  test_verbatim.lux  test_writer_hooks.lux  test_writer_struct_and_fn.lux  try_operator.rsc  tuple_destruct.lux  (+1 more)
(+739 files in other folders)
