[package]
name = "reluxscript"
version = "0.1.0"
edition = "2021"
description = "Write AST transformations once. Compile to Babel, SWC, and beyond."
license = "MIT"
repository = "https://github.com/reluxscript/reluxscript"
homepage = "https://reluxscript.com"
documentation = "https://docs.reluxscript.com"
keywords = ["babel", "swc", "ast", "compiler", "transpiler"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "relux"
path = "src/main.rs"

[dependencies]
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

[features]
default = ["codegen"]
codegen = []

[profile.release]
lto = true
