[package]
name = "reluxscript"
version = "0.1.1"
edition = "2025"
description = "Write AST transformations once. Compile to Babel, SWC, and beyond."
license = "MIT"
repository = "https://github.com/reluxscript/reluxscript"
homepage = "https://reluxscript.com"
documentation = "https://docs.reluxscript.com"
keywords = ["babel", "swc", "ast", "compiler", "transpiler"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "relux"
path = "src/main.rs"

[dependencies]
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"

# WASM dependencies (only when building for wasm32)
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["codegen"]
codegen = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

[profile.release]
lto = true
