[package]
name = "reluxscript"
version = "0.1.1"
edition = "2021"
description = "Write AST transformations once. Compile to Babel, SWC, and beyond."
license = "MIT"
repository = "https://github.com/reluxscript/reluxscript"
homepage = "https://reluxscript.com"
documentation = "https://docs.reluxscript.com"
keywords = ["babel", "swc", "ast", "compiler", "transpiler"]
categories = ["development-tools", "compilers"]

[[bin]]
name = "relux"
path = "src/main.rs"

[[bin]]
name = "reluxscript-lsp"
path = "src/bin/reluxscript-lsp.rs"
required-features = ["lsp"]

[dependencies]
ariadne = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
toml = "0.8"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["codegen"]
codegen = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]
lsp = ["tower-lsp", "tokio"]

[profile.release]
lto = true
